Almost there. Surprisingly, LogicProcessor needs to be fixed